# lingo-ap-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ap_state.cpp  ap_state.h  area_popup.cpp  area_popup.h  area_window.cpp  area_window.h  connection_dialog.cpp  eye_indicator.cpp  eye_indicator.h  game_data.cpp  game_data.h  main.cpp  tracker_config.h  tracker_frame.cpp  tracker_frame.h  tracker_panel.cpp  tracker_panel.h  tracker_state.cpp  tracker_state.h  vcpkg.json
.github/workflows/: build-binaries.yml
assets/: areas.yaml  pilgrimage.yaml
src/: achievements_pane.cpp  achievements_pane.h  ap_state.cpp  ap_state.h  area_popup.cpp  area_popup.h  connection_dialog.cpp  connection_dialog.h  game_data.cpp  game_data.h  logger.cpp  logger.h  main.cpp  tracker_config.cpp  tracker_config.h  tracker_frame.cpp  tracker_frame.h  tracker_panel.cpp  tracker_panel.h  tracker_state.cpp  tracker_state.h  version.h
